--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character set and responsive design -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Page title -->
     <title>TaskFlow - Task Management App</title>
+    <!-- Main stylesheet -->
     <link rel="stylesheet" href="styles/main.css">
+    <!-- Google Fonts: Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
+        <!-- Header section with app title and subtitle -->
         <header class="header">
             <div class="header-content">
                 <h1 class="app-title">
@@ -20,9 +25,12 @@
         </header>
 
         <main class="main">
+            <!-- Task input section -->
             <div class="task-input-section">
                 <div class="input-container">
+                    <!-- Input for new task -->
                     <input type="text" id="taskInput" placeholder="What needs to be done?" class="task-input">
+                    <!-- Button to add new task -->
                     <button id="addTaskBtn" class="add-btn">
                         <span class="add-icon">+</span>
                         Add Task
@@ -30,14 +38,18 @@
                 </div>
             </div>
 
+            <!-- Tasks display section -->
             <div class="tasks-section">
                 <div class="tasks-header">
                     <h2>Your Tasks</h2>
+                    <!-- Displays number of tasks -->
                     <span id="taskCount" class="task-count">0 tasks</span>
                 </div>
+                <!-- Container for dynamically added tasks -->
                 <div id="tasksList" class="tasks-list">
                     <!-- Tasks will be dynamically added here -->
                 </div>
+                <!-- Empty state message when no tasks exist -->
                 <div id="emptyState" class="empty-state">
                     <div class="empty-icon">✨</div>
                     <h3>No tasks yet</h3>
@@ -45,16 +57,20 @@
                 </div>
             </div>
 
+            <!-- Statistics section for tasks -->
             <div class="stats-section">
                 <div class="stats-grid">
+                    <!-- Total tasks stat -->
                     <div class="stat-card">
                         <span class="stat-number" id="totalTasks">0</span>
                         <span class="stat-label">Total Tasks</span>
                     </div>
+                    <!-- Completed tasks stat -->
                     <div class="stat-card">
                         <span class="stat-number" id="completedTasks">0</span>
                         <span class="stat-label">Completed</span>
                     </div>
+                    <!-- Pending tasks stat -->
                     <div class="stat-card">
                         <span class="stat-number" id="pendingTasks">0</span>
                         <span class="stat-label">Pending</span>
@@ -63,11 +79,13 @@
             </div>
         </main>
 
+        <!-- Footer section -->
         <footer class="footer">
             <p>&copy; 2024 TaskFlow. Built with HTML, CSS, and JavaScript.</p>
         </footer>
     </div>
 
+    <!-- Main JavaScript file -->
     <script src="scripts/app.js"></script>
 </body>
 </html>
