--- a/index.html
+++ b/index.html
@@ -1,47 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character set and responsive design -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Page title -->
     <title>TaskFlow - Task Management App</title>
+    <!-- Main stylesheet -->
     <link rel="stylesheet" href="styles/main.css">
+    <!-- Google Fonts: Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
+        <!-- Header section with app title and subtitle -->
         <header class="header">
             <div class="header-content">
                 <h1 class="app-title">
                     <span class="icon">📋</span>
                     TaskFlow
                 </h1>
-                <p class="app-subtitle">Streamline your productivity with priorities</p>
+                <p class="app-subtitle">Streamline your productivity</p>
             </div>
         </header>
 
         <main class="main">
-            <!-- Task Input Section -->
+            <!-- Task input section -->
             <div class="task-input-section">
                 <div class="input-container">
+                    <!-- Input for new task -->
                     <input type="text" id="taskInput" placeholder="What needs to be done?" class="task-input">
-                    <div class="input-options">
-                        <select id="prioritySelect" class="priority-select">
-                            <option value="medium">Medium Priority</option>
-                            <option value="high">High Priority</option>
-                            <option value="low">Low Priority</option>
-                        </select>
-                        <select id="categorySelect" class="category-select">
-                            <option value="personal">Personal</option>
-                            <option value="work">Work</option>
-                            <option value="shopping">Shopping</option>
-                            <option value="health">Health</option>
-                            <option value="study">Study</option>
-                        </select>
-                        <div class="date-input-container">
-                            <label for="dueDateInput" class="date-label">Due:</label>
-                            <input type="date" id="dueDateInput" class="date-input">
-                        </div>
-                    </div>
+                    <!-- Button to add new task -->
                     <button id="addTaskBtn" class="add-btn">
                         <span class="add-icon">+</span>
                         Add Task
@@ -49,60 +38,54 @@
                 </div>
             </div>
 
-            <!-- Tasks Section -->
+            <!-- Tasks display section -->
             <div class="tasks-section">
                 <div class="tasks-header">
-                    <h2>Your Tasks (Priority Focus)</h2>
-                    <div class="header-controls">
-                        <div class="sort-controls">
-                            <label for="sortSelect">Sort by:</label>
-                            <select id="sortSelect" class="sort-select">
-                                <option value="priority">Priority</option>
-                                <option value="created">Date Created</option>
-                                <option value="alphabetical">Alphabetical</option>
-                            </select>
-                        </div>
-                        <span id="taskCount" class="task-count">0 tasks</span>
-                    </div>
+                    <h2>Your Tasks</h2>
+                    <!-- Displays number of tasks -->
+                    <span id="taskCount" class="task-count">0 tasks</span>
                 </div>
+                <!-- Container for dynamically added tasks -->
                 <div id="tasksList" class="tasks-list">
                     <!-- Tasks will be dynamically added here -->
                 </div>
+                <!-- Empty state message when no tasks exist -->
                 <div id="emptyState" class="empty-state">
                     <div class="empty-icon">✨</div>
                     <h3>No tasks yet</h3>
-                    <p>Add your first task with priority to get started!</p>
+                    <p>Add your first task above to get started!</p>
                 </div>
             </div>
 
-            <!-- Statistics Section -->
+            <!-- Statistics section for tasks -->
             <div class="stats-section">
                 <div class="stats-grid">
+                    <!-- Total tasks stat -->
                     <div class="stat-card">
                         <span class="stat-number" id="totalTasks">0</span>
                         <span class="stat-label">Total Tasks</span>
                     </div>
+                    <!-- Completed tasks stat -->
                     <div class="stat-card">
                         <span class="stat-number" id="completedTasks">0</span>
                         <span class="stat-label">Completed</span>
                     </div>
+                    <!-- Pending tasks stat -->
                     <div class="stat-card">
                         <span class="stat-number" id="pendingTasks">0</span>
                         <span class="stat-label">Pending</span>
-                    </div>
-                    <div class="stat-card priority-stats">
-                        <span class="stat-number" id="highPriorityTasks">0</span>
-                        <span class="stat-label">High Priority</span>
                     </div>
                 </div>
             </div>
         </main>
 
+        <!-- Footer section -->
         <footer class="footer">
             <p>&copy; 2024 TaskFlow. Built with HTML, CSS, and JavaScript.</p>
         </footer>
     </div>
 
+    <!-- Main JavaScript file -->
     <script src="scripts/app.js"></script>
 </body>
 </html>
