--- a/index.html
+++ b/index.html
@@ -28,13 +28,39 @@
             <!-- Task input section -->
             <div class="task-input-section">
                 <div class="input-container">
-                    <!-- Input for new task -->
-                    <input type="text" id="taskInput" placeholder="What needs to be done?" class="task-input">
-                    <!-- Button to add new task -->
-                    <button id="addTaskBtn" class="add-btn">
-                        <span class="add-icon">+</span>
-                        Add Task
-                    </button>
+                    <!-- FEATURE 2 ADDITION: Input options grid with category -->
+                    <div class="input-options">
+                        <!-- Input for new task -->
+                        <input type="text" id="taskInput" placeholder="What needs to be done?" class="task-input">
+                        <!-- FEATURE 2 ADDITION: Category selection dropdown -->
+                        <select id="categorySelect" class="category-select">
+                            <option value="personal">👤 Personal</option>
+                            <option value="work">💼 Work</option>
+                            <option value="shopping">🛒 Shopping</option>
+                            <option value="health">🏥 Health</option>
+                            <option value="study">📚 Study</option>
+                        </select>
+                        <!-- Button to add new task -->
+                        <button id="addTaskBtn" class="add-btn">
+                            <span class="add-icon">+</span>
+                            Add Task
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- FEATURE 2 ADDITION: Category filters section -->
+            <div class="filters-section">
+                <div class="filter-container">
+                    <h3>Filter by Category</h3>
+                    <div class="filter-buttons">
+                        <button class="filter-btn active" data-category="all">All</button>
+                        <button class="filter-btn" data-category="personal">👤 Personal</button>
+                        <button class="filter-btn" data-category="work">💼 Work</button>
+                        <button class="filter-btn" data-category="shopping">🛒 Shopping</button>
+                        <button class="filter-btn" data-category="health">🏥 Health</button>
+                        <button class="filter-btn" data-category="study">📚 Study</button>
+                    </div>
                 </div>
             </div>
 
@@ -74,6 +100,21 @@
                     <div class="stat-card">
                         <span class="stat-number" id="pendingTasks">0</span>
                         <span class="stat-label">Pending</span>
+                    </div>
+                    <!-- FEATURE 2 ADDITION: Categories used stat -->
+                    <div class="stat-card">
+                        <span class="stat-number" id="categoriesUsed">0</span>
+                        <span class="stat-label">Categories Used</span>
+                    </div>
+                </div>
+
+                <!-- FEATURE 2 ADDITION: Detailed analytics section -->
+                <div class="detailed-analytics">
+                    <div class="analytics-section">
+                        <h3>Category Breakdown</h3>
+                        <div id="categoryAnalytics" class="category-analytics">
+                            <!-- Category breakdown will be rendered here -->
+                        </div>
                     </div>
                 </div>
             </div>
