Add feature 3 files

--- a/index.html
+++ b/index.html
@@ -28,13 +28,31 @@
             <!-- Task input section -->
             <div class="task-input-section">
                 <div class="input-container">
-                    <!-- Input for new task -->
-                    <input type="text" id="taskInput" placeholder="What needs to be done?" class="task-input">
-                    <!-- Button to add new task -->
-                    <button id="addTaskBtn" class="add-btn">
-                        <span class="add-icon">+</span>
-                        Add Task
-                    </button>
+                    <!-- FEATURE 3 ADDITION: Input options grid with due date -->
+                    <div class="input-options">
+                        <!-- Input for new task -->
+                        <input type="text" id="taskInput" placeholder="What needs to be done?" class="task-input">
+                        <!-- FEATURE 3 ADDITION: Due date input -->
+                        <input type="date" id="dueDateInput" class="due-date-input">
+                        <!-- Button to add new task -->
+                        <button id="addTaskBtn" class="add-btn">
+                            <span class="add-icon">+</span>
+                            Add Task
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- FEATURE 3 ADDITION: Due date filters section -->
+            <div class="filters-section">
+                <div class="filter-container">
+                    <h3>Filter by Due Date</h3>
+                    <div class="filter-buttons">
+                        <button class="filter-btn active" data-filter="all">All Tasks</button>
+                        <button class="filter-btn" data-filter="due-today">Due Today</button>
+                        <button class="filter-btn" data-filter="overdue">Overdue</button>
+                        <button class="filter-btn" data-filter="no-due-date">No Due Date</button>
+                    </div>
                 </div>
             </div>
 
@@ -74,6 +92,21 @@
                     <div class="stat-card">
                         <span class="stat-number" id="pendingTasks">0</span>
                         <span class="stat-label">Pending</span>
+                    </div>
+                    <!-- FEATURE 3 ADDITION: Overdue tasks stat -->
+                    <div class="stat-card">
+                        <span class="stat-number" id="overdueTasks">0</span>
+                        <span class="stat-label">Overdue</span>
+                    </div>
+                </div>
+
+                <!-- FEATURE 3 ADDITION: Detailed analytics section -->
+                <div class="detailed-analytics">
+                    <div class="analytics-section">
+                        <h3>Due Date Analytics</h3>
+                        <div id="dueDateAnalytics" class="due-date-analytics">
+                            <!-- Due date breakdown will be rendered here -->
+                        </div>
                     </div>
                 </div>
             </div>
