Add feature 4 files

--- a/index.html
+++ b/index.html
@@ -38,12 +38,89 @@
                 </div>
             </div>
 
+            <!-- FEATURE 4 ADDITION: Search and Filter section -->
+            <div class="search-filter-section">
+                <div class="search-container">
+                    <h3>Search & Filter</h3>
+
+                    <!-- Search input -->
+                    <div class="search-input-container">
+                        <input type="text" id="searchInput" placeholder="Search tasks..." class="search-input">
+                        <span class="search-icon">🔍</span>
+                    </div>
+
+                    <!-- Filter controls -->
+                    <div class="filter-controls">
+                        <!-- Status filter -->
+                        <div class="filter-group">
+                            <label>Status:</label>
+                            <select id="statusFilter" class="filter-select">
+                                <option value="all">All</option>
+                                <option value="pending">Pending</option>
+                                <option value="completed">Completed</option>
+                            </select>
+                        </div>
+
+                        <!-- Sort options -->
+                        <div class="filter-group">
+                            <label>Sort by:</label>
+                            <select id="sortOption" class="filter-select">
+                                <option value="newest">Newest First</option>
+                                <option value="oldest">Oldest First</option>
+                                <option value="alphabetical">A-Z</option>
+                                <option value="reverse-alphabetical">Z-A</option>
+                            </select>
+                        </div>
+
+                        <!-- Clear filters button -->
+                        <button id="clearFiltersBtn" class="clear-filters-btn">Clear All</button>
+                    </div>
+
+                    <!-- Advanced filters toggle -->
+                    <div class="advanced-toggle">
+                        <button id="advancedToggle" class="advanced-toggle-btn">
+                            Advanced Filters
+                            <span class="toggle-icon">▼</span>
+                        </button>
+                    </div>
+
+                    <!-- Advanced filters panel -->
+                    <div id="advancedPanel" class="advanced-panel">
+                        <div class="advanced-content">
+                            <div class="filter-group">
+                                <label>Created:</label>
+                                <select id="createdFilter" class="filter-select">
+                                    <option value="all">Any time</option>
+                                    <option value="today">Today</option>
+                                    <option value="yesterday">Yesterday</option>
+                                    <option value="this-week">This week</option>
+                                    <option value="this-month">This month</option>
+                                </select>
+                            </div>
+                            <div class="filter-group">
+                                <label>Text length:</label>
+                                <select id="lengthFilter" class="filter-select">
+                                    <option value="all">Any length</option>
+                                    <option value="short">Short (< 20 chars)</option>
+                                    <option value="medium">Medium (20-50 chars)</option>
+                                    <option value="long">Long (> 50 chars)</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Tasks display section -->
             <div class="tasks-section">
                 <div class="tasks-header">
                     <h2>Your Tasks</h2>
-                    <!-- Displays number of tasks -->
-                    <span id="taskCount" class="task-count">0 tasks</span>
+                    <div class="task-summary">
+                        <!-- FEATURE 4 ADDITION: Search results summary -->
+                        <span id="searchResults" class="search-results"></span>
+                        <!-- Displays number of tasks -->
+                        <span id="taskCount" class="task-count">0 tasks</span>
+                    </div>
                 </div>
                 <!-- Container for dynamically added tasks -->
                 <div id="tasksList" class="tasks-list">
@@ -54,6 +131,12 @@
                     <div class="empty-icon">✨</div>
                     <h3>No tasks yet</h3>
                     <p>Add your first task above to get started!</p>
+                </div>
+                <!-- FEATURE 4 ADDITION: No search results state -->
+                <div id="noResultsState" class="no-results-state">
+                    <div class="no-results-icon">🔍</div>
+                    <h3>No matching tasks</h3>
+                    <p>Try adjusting your search or filters to find what you're looking for.</p>
                 </div>
             </div>
 
@@ -74,6 +157,11 @@
                     <div class="stat-card">
                         <span class="stat-number" id="pendingTasks">0</span>
                         <span class="stat-label">Pending</span>
+                    </div>
+                    <!-- FEATURE 4 ADDITION: Filtered results stat -->
+                    <div class="stat-card">
+                        <span class="stat-number" id="filteredTasks">0</span>
+                        <span class="stat-label">Showing</span>
                     </div>
                 </div>
             </div>
