--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
                 <div class="input-container">
                     <!-- Input for new task -->
                     <input type="text" id="taskInput" placeholder="What needs to be done?" class="task-input">
+                    <!-- Input options - reserved spaces for all features -->
+                    <div class="input-options">
+                        <!-- Feature 1: Priority System -->
+                        <select id="prioritySelect" class="priority-select">
+                            <option value="medium">Medium Priority</option>
+                            <option value="high">High Priority</option>
+                            <option value="low">Low Priority</option>
+                        </select>
+                        <!-- Feature 2: Category Management -->
+                        <select id="categorySelect" class="category-select">
+                            <option value="personal">Personal</option>
+                            <option value="work">Work</option>
+                            <option value="shopping">Shopping</option>
+                            <option value="health">Health</option>
+                            <option value="study">Study</option>
+                        </select>
+                        <!-- Feature 3: Due Date System -->
+                        <div id="dueDateContainer" class="date-input-container">
+                            <label for="dueDateInput" class="date-label">Due:</label>
+                            <input type="date" id="dueDateInput" class="date-input">
+                        </div>
+                    </div>
                     <!-- Button to add new task -->
                     <button id="addTaskBtn" class="add-btn">
                         <span class="add-icon">+</span>
@@ -38,12 +60,109 @@
                 </div>
             </div>
 
+            <!-- Feature 4: Search & Filter Section -->
+            <div class="search-filter-section">
+                <div class="search-container">
+                    <div class="search-input-wrapper">
+                        <span class="search-icon">🔍</span>
+                        <input type="text" id="searchInput" placeholder="Search tasks..." class="search-input">
+                        <button id="clearSearch" class="clear-search" title="Clear search">✕</button>
+                    </div>
+                </div>
+
+                <div class="filter-container">
+                    <div class="filter-section">
+                        <h3>Quick Filters:</h3>
+                        <div class="quick-filters">
+                            <button class="filter-btn active" data-filter="all">
+                                <span class="filter-icon">📋</span>
+                                All Tasks
+                            </button>
+                            <button class="filter-btn" data-filter="completed">
+                                <span class="filter-icon">✅</span>
+                                Completed
+                            </button>
+                            <button class="filter-btn" data-filter="pending">
+                                <span class="filter-icon">⏳</span>
+                                Pending
+                            </button>
+                            <button class="filter-btn" data-filter="high-priority">
+                                <span class="filter-icon">🔥</span>
+                                High Priority
+                            </button>
+                            <button class="filter-btn" data-filter="due-today">
+                                <span class="filter-icon">📅</span>
+                                Due Today
+                            </button>
+                            <button class="filter-btn" data-filter="overdue">
+                                <span class="filter-icon">⚠️</span>
+                                Overdue
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="category-filters">
+                        <h3>Filter by Category:</h3>
+                        <div class="category-filter-buttons">
+                            <button class="category-filter-btn active" data-category="all">
+                                <span class="filter-icon">🔍</span>
+                                All Categories
+                            </button>
+                            <button class="category-filter-btn" data-category="work">
+                                <span class="filter-icon">💼</span>
+                                Work
+                            </button>
+                            <button class="category-filter-btn" data-category="personal">
+                                <span class="filter-icon">🏠</span>
+                                Personal
+                            </button>
+                            <button class="category-filter-btn" data-category="shopping">
+                                <span class="filter-icon">🛒</span>
+                                Shopping
+                            </button>
+                            <button class="category-filter-btn" data-category="health">
+                                <span class="filter-icon">🏥</span>
+                                Health
+                            </button>
+                            <button class="category-filter-btn" data-category="study">
+                                <span class="filter-icon">📚</span>
+                                Study
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="advanced-filters">
+                        <button id="toggleAdvanced" class="toggle-advanced">
+                            <span>Advanced Options</span>
+                            <span class="toggle-icon">▼</span>
+                        </button>
+                        <div id="advancedPanel" class="advanced-panel">
+                            <div class="filter-group">
+                                <label>Sort by:</label>
+                                <select id="sortSelect" class="sort-select">
+                                    <option value="priority">Priority</option>
+                                    <option value="due-date">Due Date</option>
+                                    <option value="created-desc">Newest First</option>
+                                    <option value="created-asc">Oldest First</option>
+                                    <option value="alphabetical">Alphabetical</option>
+                                </select>
+                            </div>
+                            <div class="filter-actions">
+                                <button id="clearAllFilters" class="clear-filters-btn">Clear All Filters</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Tasks display section -->
             <div class="tasks-section">
                 <div class="tasks-header">
                     <h2>Your Tasks</h2>
-                    <!-- Displays number of tasks -->
-                    <span id="taskCount" class="task-count">0 tasks</span>
+                    <div class="header-info">
+                        <span id="searchResults" class="search-results"></span>
+                        <span id="taskCount" class="task-count">0 tasks</span>
+                    </div>
                 </div>
                 <!-- Container for dynamically added tasks -->
                 <div id="tasksList" class="tasks-list">
@@ -74,6 +193,38 @@
                     <div class="stat-card">
                         <span class="stat-number" id="pendingTasks">0</span>
                         <span class="stat-label">Pending</span>
+                    </div>
+                    <!-- Feature 1: Priority Statistics -->
+                    <div class="stat-card priority-stats">
+                        <span class="stat-number" id="highPriorityTasks">0</span>
+                        <span class="stat-label">High Priority</span>
+                    </div>
+                    <!-- Feature 3: Due Date Statistics -->
+                    <div class="stat-card overdue-stats">
+                        <span class="stat-number" id="overdueTasks">0</span>
+                        <span class="stat-label">Overdue</span>
+                    </div>
+                    <!-- Feature 2: Category Statistics -->
+                    <div class="stat-card category-stats">
+                        <span class="stat-number" id="categoriesUsed">0</span>
+                        <span class="stat-label">Categories</span>
+                    </div>
+                </div>
+
+                <!-- Feature 2 & 3: Detailed Analytics -->
+                <div class="detailed-analytics">
+                    <div class="analytics-section">
+                        <h3>Category Breakdown</h3>
+                        <div id="categoryStats" class="category-stats-list">
+                            <!-- Category statistics will be populated here -->
+                        </div>
+                    </div>
+
+                    <div class="analytics-section">
+                        <h3>Due Date Overview</h3>
+                        <div id="dueDateStats" class="due-date-stats-list">
+                            <!-- Due date statistics will be populated here -->
+                        </div>
                     </div>
                 </div>
             </div>
